--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@
 0229Room/.gradle
 0229Room/app/build
 
+0301Words/
+
 0301BottomNavigationBar/.idea
 0301BottomNavigationBar/.gradle
 0301BottomNavigationBar/app/build
